syntax = "proto3";

option go_package = "/auth;pb_auth";

service NotifyAuth {
  rpc JoinPublication (JoinPublicationRequest) returns (Response);
  rpc LeavePublication (LeavePublicationRequest) returns (Response);
  rpc ChangePublicationPlan (ChangePublicationPlanRequest) returns (Response);

  rpc ConfirmPublisherSubscription (ConfirmPublisherSubscriptionRequest) returns (Response);
  rpc RevokePublisherSubscription (RevokePublisherSubscriptionRequest) returns (Response);
  rpc ChangePublisherSubscription (ChangePublisherSubscriptionRequest) returns (Response);
}

message Response {
  bool is_success = 1;
}

message JoinPublicationRequest {
  int32 user_id = 1;
  int32 publication_id = 2;
  bool is_premium = 3;
  int32 subscription_id = 4;
}

message LeavePublicationRequest {
  int32 user_id = 1;
  int32 publication_id = 2;
  int32 subscription_id = 3;
}

message ChangePublicationPlanRequest {
  int32 subscription_id = 1;
}

message ConfirmPublisherSubscriptionRequest {
  int32 user_id = 1;
  int32 plan_id = 2;
  int32 subscription_id = 3;
}

message RevokePublisherSubscriptionRequest {
  int32 subscription_id = 1;
}

message ChangePublisherSubscriptionRequest {
  int32 plan_id = 1;
  int32 subscription_id = 2;
}
