syntax = "proto3";
option go_package = "/subscription;pb_subscription";


service NotifySubscription {
  rpc JoinPublication (JoinPublicationRequest) returns (Response);
  rpc LeavePublication (LeavePublicationRequest) returns (Response);
  rpc ChangePublicationPlan (ChangePublicationPlanRequest) returns (Response);

  rpc SubscribePublisherPlan (SubscribePublisherRequest) returns (Response);
  rpc UnsubscribePublisherPlan (UnsubscribePublisherRequest) returns (Response);
  rpc ChangePublisherPlan (ChangePublisherPlanRequest) returns (Response);

  rpc BookPublisherSubscription(BookPublisherSubscriptionRequest) returns (Response);
  rpc BookSubscriberSubscription(BookSubscriberSubscriptionRequest) returns (Response);

  rpc HealthCheck(HealthCheckRequest) returns (Response);
}

message HealthCheckRequest{}

message JoinPublicationRequest {
  int32 user_id = 1;
  int32 publication_id = 2;
  int32 plan_id = 3;
}

message LeavePublicationRequest {
  int32 user_id = 1;
  int32 publication_id = 2;
}

message ChangePublicationPlanRequest {
  int32 user_id = 1;
  int32 publication_id = 2;
  int32 new_plan_id = 3;
}

message SubscribePublisherRequest {
  int32 user_id = 1;
  int32 plan_id = 2;
}

message UnsubscribePublisherRequest {
  int32 user_id = 1;
}

message ChangePublisherPlanRequest {
  int32 user_id = 1;
  int32 new_plan_id = 2;
}

message Response {
  bool is_success = 1;
}

message  BookPublisherSubscriptionRequest {
  int32 user_id = 1;
  int32 plan_id = 2;
}

message BookSubscriberSubscriptionRequest {
  int32 user_id = 1;
  int32 publication_id = 2;
  int32 plan_id = 3;
}
